--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "dependencies": {
         "cors": "^2.8.5",
         "express": "^4.17.1",
-        "ytdl-core": "^4.5.0"
-    },
-    "devDependencies": {}
+        "youtube-dl-exec": "^3.0.10"
+    }
 }
